--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 # MONGO_URI=mongodb://127.0.0.1:27017/node_api
-MONGO_URI=mongodb+srv://myuser:mypassword@cluster0.abcdef.mongodb.net/mydb
+MONGO_URI=mongodb+srv://myuser:mypassword@cluster0.kadzta8.mongodb.net/mydatabase?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_super_secret_key
 JWT_EXPIRES_IN=1d
